--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
     font-family: 'Roboto', sans-serif;;
     font-weight: 400;
-    color: rgb(208, 208, 208);
+    color: #0d1117;
     line-height: 1.5em;
     font-size: 17px; 
     padding: 70px;
